--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <h1 class="text-3xl text-center mt-5 font-bold underline">Hello friends</h1>
+  <h1 class="text-3xl text-center mt-5 font-bold">Hello friends</h1>
     <section class="bg-yellow-400 grid grid-cols-3 ">
         <div class="bg-blue-400 m-4 p-4">1</div>
         <div class="bg-blue-400 m-4 p-4">2</div>
         <div class="bg-blue-400 m-4 p-4">3</div>
-        <div class="bg-blue-400 m-4 p-4">4</div>
+        <div class="bg-blue-400 m-4 p-4 col-span-3">4</div>
         <div class="bg-blue-400 m-4 p-4">5</div>
         <div class="bg-blue-400 m-4 p-4">6</div>
         <div class="bg-blue-400 m-4 p-4">7</div>
@@ -21,7 +21,7 @@
         <div class="bg-blue-400 m-4 p-4">11</div>
         <div class="bg-blue-400 m-4 p-4">12</div>
         <div class="bg-blue-400 m-4 p-4">13</div>
-        <div class="bg-blue-400 m-4 p-4">14</div>
+        <div class="bg-blue-400 m-4 p-4 col-span-2">14</div>
         <div class="bg-blue-400 m-4 p-4">15</div>
     </section>
 </body>
