--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
         <div class="bg-blue-400 m-4 p-4">6</div>
         <div class="bg-blue-400 m-4 p-4">7</div>
         <div class="bg-blue-400 m-4 p-4">8</div>
-        <div class="bg-blue-400 m-4 p-4">9</div>
+        <div class="bg-blue-400 m-4 p-4 row-span-2">9</div>
         <div class="bg-blue-400 m-4 p-4">10</div>
         <div class="bg-blue-400 m-4 p-4">11</div>
         <div class="bg-blue-400 m-4 p-4">12</div>
         <div class="bg-blue-400 m-4 p-4">13</div>
         <div class="bg-blue-400 m-4 p-4 col-span-2">14</div>
         <div class="bg-blue-400 m-4 p-4">15</div>
+    </section>
+
+    <section class="container m-auto mt-5 text-center grid grid-cols-3 bg-purple-200 gap-4">
+        <div class="bg-blue-400 p-4 col-span-3">1</div>
+        <div class="bg-blue-400 p-4 h-60 col-span-2 row-span-2">2</div>
+        <div class="bg-blue-400 p-4 row-span-2">3</div>
+        <div class="bg-blue-400 p-4 col-span-3">4</div>
     </section>
 </body>
 </html>
